--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
     - "2.7"
 install:
     - pip install -r requirements.txt
-setup:
+script:
     - python deepagg/block1.py
     - python deepagg/block2.py
     - python deepagg/feature.py
